--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 body { height: 100vh; 
        color: #1f1f1f; 
-       background: linear-gradient(to bottom, #bada55, #c0ffee); } 
+       background: linear-gradient(to bottom, #da5555, #c0ffee); } 
