--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,7 @@
 
   #presentacion-container p {
     margin-top:10px;
+    line-height: 1.6rem;
   }
   
   @media only screen and (max-width: 768px) {
