--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,11 @@
       max-width:100%;
       width: 100vw;
     }
+
+    #breadcrumb-container li:last-child {
+      text-overflow: ellipsis;
+      overflow:hidden;
+    }
   }
   
   @media only screen and (min-width: 769px) {
