--- a/css/style.css
+++ b/css/style.css
@@ -675,3 +675,57 @@ dd {
   margin-left: auto;
   margin-right: auto;
 }
+
+
+/* Animation header */ 
+
+@keyframes bounceIn1 {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  25% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+}
+
+@keyframes spin { 
+  from { 
+      transform: rotate(0deg); 
+  } to { 
+      transform: rotate(360deg); 
+  }
+}
+
+@keyframes spin-inverse { 
+  from { 
+      transform: rotate(360deg); 
+  } to { 
+      transform: rotate(0deg); 
+  }
+}
+
+#logo-text-header span:nth-child(2), #logo-text-header span:last-child {
+  animation: bounceIn1 2s ease-in-out infinite;
+}
+
+
+.block-logo:nth-child(odd) img:hover {
+  animation: spin 2s ease-in-out infinite;
+}
+
+.block-logo:nth-child(even) img:hover {
+  animation: spin-inverse 2s ease-in-out infinite;
+}
